# Qenex

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  package.json
.cursor/rules/: button-cursor.mdc  reset-app.mdc
.github/workflows/: ci.yml  release.yml
acp-to-agui/docs/: protocol-translation.md
agent-test/: test-agent.txt
apps/desktop/: README.md  bridge.config.json  index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  lib.rs  main.rs
apps/desktop/src/host/: tauri-host.ts
apps/jetbrains/: README.md  bridge.config.json  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/jetbrains/src/main/kotlin/com/qenex/: BridgeProcessManager.kt  HostThemeCollector.kt  QenexAppListener.kt  (+4 more)
apps/jetbrains/webview/: index.html  package.json  tsconfig.json  vite.config.ts
apps/jetbrains/webview/src/: main.tsx
apps/jetbrains/webview/src/host/: jetbrains-host.ts
apps/vscode/: .vscodeignore  README.md  bridge.config.json  esbuild.mjs  package.json  tsconfig.json
apps/vscode/src/: bridge-manager.ts  extension.ts  messages.test.ts  messages.ts  webview-provider.ts
apps/vscode/webview/: index.html  package.json  tsconfig.json  vite.config.ts
apps/vscode/webview/src/: main.tsx  vite-env.d.ts  vscode.d.ts
apps/vscode/webview/src/host/: vscode-host.ts  vscode-theme.ts
apps/web/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/public/: __reset-first-run.html
apps/web/src/: main.tsx
apps/web/src/host/: web-host.ts
backend-rs/: Cargo.toml  README.md  bridge.config.json
backend-rs/src/: config.rs
backend-rs/src/agent/: connection.rs  mod.rs  session_init.rs
backend-rs/src/agui/: events.rs  mod.rs
backend-rs/src/bridge/: acp_to_agui.rs  mod.rs  permission.rs
backend-rs/src/policy/: mod.rs  tool_policy.rs
backend-rs/src/server/: mod.rs  routes.rs
backend-rs/src/server/api/: files.rs  git.rs
backend-rs/src/sessions/: manager.rs  mod.rs  store.rs  types.rs
backend-rs/src/types/: mod.rs
backend-rs/tests/: bridge_mapping.rs  policy.rs
crates/bridge/: Cargo.toml  README.md  bridge.config.json  build.rs
crates/bridge/src/: config.rs  lib.rs
crates/bridge/src/agent/: auth.rs  command.rs  connection.rs  detect.rs  download.rs  ensure.rs  http.rs  install.rs  mod.rs  path_env.rs  paths.rs  process.rs  progress.rs  registry.rs  runtime.rs  session_init.rs  uv_runtime.rs
crates/bridge/src/agui/: events.rs  sse.rs
crates/bridge/src/bridge/: acp_to_agui.rs
crates/bridge/src/policy/: tool_policy.rs  types.rs
crates/bridge/src/server/: frontend.rs  mod.rs  routes.rs
crates/bridge/src/server/api/: mod.rs  task_git.rs
crates/bridge/src/sessions/: demo.rs  git_inplace.rs  git_mode.rs  git_session.rs  git_snapshot.rs  manager.rs  mod.rs  prompt.rs  store.rs  types.rs
crates/bridge/src/types/api/: files.rs  git.rs  mod.rs
crates/bridge/tests/: auth_required.rs  event_poll.rs  git_session_flow.rs  git_snapshot_flow.rs  git_store.rs  rewind_store.rs
frontend/: BUGFIX.md  FRONTEND_TABS.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentRuntimeProvider.tsx  ApprovalBridge.tsx  HistoryPanel.tsx  SessionConfigBar.tsx  TabBar.tsx
frontend/src/components/assistant-ui/: thread.tsx
frontend/src/context/: SessionConfigContext.tsx
frontend/src/lib/: bridge-agent.ts  bridge-api.ts  bridge-history-adapter.ts  replay-agui-events.ts  session-config.ts
frontend/src/store/: tabs-store.ts
scripts/: build-all.mjs  build-desktop.mjs  build-jetbrains.mjs  build-rust.mjs  build-vscode.mjs  build-web.mjs  ci-release.mjs  dev-jetbrains.mjs  dev.mjs  package-jetbrains.mjs  start-build.mjs  verify-desktop.mjs  verify-jetbrains.mjs  verify-vscode.mjs
