[package]
name = "acp-to-agui"
version = "0.2.2"
edition = "2021"
description = "ACP → AG-UI bridge: translate Agent Client Protocol into AG-UI events"
license = "MIT"

[features]
default = []
server = [
    "dep:axum",
    "dep:tower-http",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:rust-embed",
    "dep:mime_guess",
]

[dependencies]
agent-client-protocol = { version = "1.1", features = ["unstable_auth_methods"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs", "process", "time", "rt-multi-thread", "macros", "signal"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
futures = "0.3"
tokio-stream = "0.1"

axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
which = "7"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "acp-to-agui"
path = "src/bin/acp-to-agui.rs"
required-features = ["server"]

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
